--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,7 +15,7 @@
         font-family: "Roboto", sans-serif;
       }
     </style>
-    <title>Youtube Clone</title>
+    <title>YouTube Clone</title>
   </head>
   <body>
     <div id="root"></div>
